# smith-automation

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DESIGN.md  README.md  graphify-rs.skill
.github/workflows/: ci.yml
apps/selector-capture/: Cargo.toml
apps/selector-capture/src/: capture.rs  main.rs  recorder.rs  types.rs
apps/smith-examples/: Cargo.toml
apps/smith-examples/examples/: agent_notepad.rs  approval_workflow.rs  flowgraph_notepad.rs  multi_agent.rs  persistent_graph.rs  rpa_notepad.rs  rpa_with_ai.rs  simple_agent.rs  streaming.rs  workflow_notepad.rs
crates/agent/smith-agent/: Cargo.toml
crates/agent/smith-agent/src/: cycle.rs  error.rs  lib.rs
crates/agent/smith-agent/src/agent/: llm.rs  memory.rs  mod.rs  runtime.rs  sub_agent.rs  task_tracker.rs  tool.rs
crates/agent/smith-agent/src/context/: context_window.rs  memory_extractor.rs  mod.rs  scroll.rs  session_history.rs  vector_memory.rs
crates/agent/smith-agent/src/cycle/: goal.rs  proactive.rs  time.rs  turn.rs
crates/agent/smith-agent/src/governance/: file_guard.rs  matrix.rs  mod.rs  tool_guard.rs
crates/agent/smith-agent/src/loops/: approval.rs  goal.rs  graph.rs  loop_trait.rs  mission.rs  mod.rs  parallel.rs  plan.rs  proactive.rs  time.rs  turn.rs  types.rs  verifier.rs
crates/agent/smith-agent/src/memory/: distilled.rs  embed_store.rs  episodic.rs  mod.rs  scroll.rs  working.rs
crates/agent/smith-agent/src/orchestration/: acp.rs  broadcast.rs  mod.rs  round_robin.rs  router.rs  supervisor.rs
crates/agent/smith-agent/src/orchestration/a2a/: client.rs  mod.rs  server.rs  transport.rs  types.rs
crates/agent/smith-agent/src/persistence/: mod.rs
crates/agent/smith-agent/src/plugin/: host.rs  loader.rs  manifest.rs  mod.rs  registry.rs
crates/agent/smith-agent/src/registry/: agent_def.rs  mod.rs  provider.rs  session.rs  store.rs
crates/agent/smith-agent/src/sandbox/: appcontainer.rs  approval.rs  bubblewrap.rs  env_gate.rs  exec.rs  mod.rs  policy.rs  scanner.rs  types.rs
crates/agent/smith-agent/src/scheduler/: memory_dream.rs  mod.rs  persist.rs  schedule.rs  task.rs
crates/agent/smith-agent/src/tools/: adapter.rs  calculator.rs  custom.rs  delegate_external.rs  document_read.rs  mod.rs  recall_history.rs  shell_tool.rs  time_tool.rs  web_search.rs
crates/app/smith-cli/: Cargo.toml
crates/app/smith-cli/src/: agents.rs  doctor.rs  main.rs  skills.rs
crates/app/smith-observe/: Cargo.toml
crates/app/smith-observe/src/: collector.rs  db.rs  error.rs  exporter.rs  lib.rs  trace.rs
crates/app/smith-server/: Cargo.toml
crates/app/smith-server/src/: main.rs  routes.rs  state.rs
crates/app/smith-server/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/app/smith-server/web/src/: App.tsx  api.ts  app.css  styles.css  types.ts
crates/app/smith-server/web/src/components/: AgentsPanel.tsx  ChatArea.tsx  LogsPanel.tsx  MemoryPanel.tsx  ObservePanel.tsx  ProvidersPanel.tsx  SecurityPanel.tsx  SessionsPanel.tsx  SettingsPanel.tsx  SkillsPanel.tsx  ToolsPanel.tsx
crates/app/smith-server/web/src/components/observe/: MetricsCharts.tsx  ObserveOverview.tsx  ObservePage.tsx  TraceDetail.tsx  TracesTable.tsx
crates/core/smith-core/: Cargo.toml
crates/core/smith-core/src/: ai.rs  context.rs  error.rs  lib.rs  registry.rs  retry.rs  tool.rs
crates/domain/smith-ai/: Cargo.toml
crates/domain/smith-ai/src/: agent.rs  lib.rs  provider.rs
crates/domain/smith-rpa/: Cargo.toml
crates/domain/smith-rpa/src/: lib.rs
crates/domain/smith-rpa/src/windows/: mod.rs
crates/domain/smith-windows/: Cargo.toml
crates/domain/smith-windows/src/: element.rs  lib.rs  selector.rs
crates/domain/smith-windows/src/tools/: click.rs  find.rs  input_text.rs  mod.rs  process.rs  set_text.rs  wait.rs
crates/integration/smith-mcp/: Cargo.toml
crates/integration/smith-mcp/src/: adapter.rs  client.rs  lib.rs  registry.rs  transport.rs  types.rs
crates/integration/smith-providers/: Cargo.toml
crates/integration/smith-providers/src/: anthropic.rs  gemini.rs  lib.rs  openai.rs  provider_factory.rs
crates/integration/smith-workflow/: Cargo.toml
crates/integration/smith-workflow/src/: executor.rs  graph.rs  lib.rs  node.rs
crates/smith-ai/: Cargo.toml
crates/smith-ai/src/: adapter.rs  agent.rs  lib.rs  provider.rs
crates/smith-core/: Cargo.toml
crates/smith-daemon/: Cargo.toml
crates/smith-daemon/examples/: notepad_scenario.sh
crates/smith-daemon/src/: main.rs
crates/smith-graph/: Cargo.toml
crates/smith-graph/src/: executor.rs  lib.rs  node.rs
crates/smith-windows/: Cargo.toml
crates/smith-windows/src/: element.rs  lib.rs  selector.rs
crates/smith-windows/src/tools/: click.rs  find.rs  input_text.rs  mod.rs  process.rs  set_text.rs  wait.rs
crates/smith-workflow/: Cargo.toml
crates/smith-workflow/src/: context.rs  error.rs  executor.rs  lib.rs  step.rs  workflow.rs
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md
docs/templates/: brief-template.md  contract-template.md  specification-template.md  test-plan-template.md
smith-graphify/: .graphify_manifest.json  GRAPH_REPORT.md  SKILL.md  graph.cypher  graph.graphml  graph.html  graph.json
smith-graphify/html/: community_0.html  community_1.html  community_10.html  community_11.html  community_12.html  community_13.html  community_14.html  community_15.html  community_2.html  community_3.html  community_4.html  community_5.html  community_6.html  community_7.html  community_8.html  community_9.html  index.html
smith-graphify/obsidian/: Action.md  AgentLike.md  AgentResult.md  AiHandler.md  AppState.md  BestSelector.md  CaptureOutput.md  CapturedElement.md  Cli.md  Cli_0.md  Cli_1.md  ClickTool.md  Commands.md  ContextValue.md  EdgeKind.md  Edges.md  ElementSelector.md  ExecuteRequest.md  ExecuteResponse.md  ExecutionContext.md  FileEntry.md  FindTool.md  FlowGraph.md  FlowGraphBuilder.md  GraphExecutor.md  GraphifyArtifacts.md  InputTextTool.md  MarkdownContext.md  MockAgent.md  MockAi_0.md  MockAi_1.md  MockTool_0.md  MockTool_1.md  NodeIO.md  (+581 more)
(+165 files in other folders)
