[workspace]
resolver = "2"
members = [
    "apps/smith-context",
    "crates/smith-core",
    "crates/smith-daemon",
    "crates/smith-windows",
]

[workspace.dependencies]
thiserror = "1.0"
tokio = { version = "1.38", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
