[workspace]
resolver = "2"
members = [
    "apps/selector-capture",
    "apps/smith-examples",
    "crates/smith-core",
    "crates/smith-windows",
    "crates/smith-workflow",
    "crates/smith-rpa",
    "crates/smith-ai",
    "crates/smith-graph",
]

[workspace.dependencies]
thiserror = "1.0"
tokio = { version = "1.38", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rig = { version = "0.39", default-features = false, features = ["reqwest", "native-tls"] }
tracing = "0.1"
async-recursion = "1"
futures = "0.3"
