[workspace]
resolver = "3"
members = [
    "apps/selector-capture",
    "apps/smith-examples",
    "crates/core/smith-core",
    "crates/domain/smith-windows",
    "crates/domain/smith-rpa",
    "crates/domain/smith-ai",
    "crates/integration/smith-workflow",
    "crates/integration/smith-providers",
    "crates/integration/smith-mcp",
    "crates/agent/smith-agent",
    "crates/app/smith-cli",
    "crates/app/smith-server",
    "crates/app/smith-observe",
]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
mutex_atomic = "deny"

[workspace.dependencies]
thiserror = "2"
tokio = { version = "1.38", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
futures = "0.3"
wiremock = "0.6"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"
