[package]
name = "smith-examples"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Example applications for the Smith agent framework"
repository = "https://github.com/as-kurosss/smith.git"

[dependencies]
smith-agent = { path = "../../crates/agent/smith-agent" }
smith-core = { path = "../../crates/core/smith-core" }
smith-providers = { path = "../../crates/integration/smith-providers" }
smith-windows = { path = "../../crates/domain/smith-windows" }
smith-ai = { path = "../../crates/domain/smith-ai" }
smith-workflow = { path = "../../crates/integration/smith-workflow" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
dotenvy = "0.15"
