[package]
name = "smith-daemon"
version = "0.1.0"
edition = "2024"

# Явное имя бинарника: smithd.exe на Windows
[[bin]]
name = "smithd"
path = "src/main.rs"

[dependencies]
axum = "0.7"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
smith-core = { path = "../smith-core" }
smith-windows = { path = "../smith-windows" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
