[package]
name = "smith-workflow"
version = "0.1.0"
edition = "2024"

[dependencies]
smith-core = { path = "../smith-core" }
smith-graph = { path = "../smith-graph" }
async-recursion = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
