[package]
name = "smith-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[dependencies]
smith-agent = { path = "../../agent/smith-agent" }
smith-providers = { path = "../../integration/smith-providers" }
smith-mcp = { path = "../../integration/smith-mcp" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
