[package]
name = "smith-rpa"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Type-safe RPA node constructors for FlowGraph in the Smith agent framework"
repository = "https://github.com/as-kurosss/smith.git"

[dependencies]
smith-core = { path = "../../core/smith-core" }
smith-workflow = { path = "../../integration/smith-workflow" }
serde_json = { workspace = true }
