[package]
name = "smith-windows"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Windows UI Automation tools (Click, Find, InputText, Process, SetText, Wait) for the Smith agent framework"
repository = "https://github.com/as-kurosss/smith.git"

[dependencies]
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
smith-core = { version = "0.1.0", path = "../../core/smith-core" }
tokio.workspace = true
tokio-util.workspace = true
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
uiautomation = "0.25.0"
