[package]
name = "smith-workflow"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
smith-core = { path = "../../core/smith-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
